--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,8 +14,9 @@ set-window-option -g window-status-current-bg red
 
 # vim-like bindings
 unbind-key %
-bind s split-window -v
-bind v split-window -h
+bind s split-window -v -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 # Smart pane switching with awareness of vim splits
 bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
@@ -32,13 +33,24 @@ bind > resize-pane -R 1
 bind - resize-pane -D 1
 bind + resize-pane -U 1
 
-# copy & paste between tmux and x clipboard
-bind C-p run-shell "tmux set-buffer \"$(DISPLAY=:0 xclip -o)\"; tmux paste-buffer"
-bind C-y run-shell "tmux show-buffer | DISPLAY=:0 xclip -sel clip -i"
-
 # vi-style controls for copy mode
 setw -g mode-keys vi
 
-# default session
-# new -d
-# split-window -d
+# List of plugins
+# Supports `github_username/repo` or full git URLs
+set -g @tpm_plugins "              \
+  tmux-plugins/tpm                 \
+  tmux-plugins/tmux-sensible       \
+  tmux-plugins/tmux-copycat        \
+  tmux-plugins/tmux-open           \
+  tmux-plugins/tmux-open           \
+  tmux-plugins/tmux-online-status  \
+  tmux-plugins/tmux-yank           \
+  tmux-plugins/tmux-yank           \
+"
+
+set -g @almost-sensible 'on'
+
+# Initializes TMUX plugin manager.
+# Keep this line at the very bottom of tmux.conf.
+run-shell ~/.tmux/plugins/tpm/tpm
