--- a/.riplrc
+++ b/.riplrc
@@ -1,25 +1,25 @@
 #!/usr/bin/ruby
-require 'ripl/multi_line'
-require 'ripl/irb'
-require 'ripl/commands'
-require 'ripl/shell_commands'
-require 'ripl/color_result'
-require 'ripl/auto_indent'
-require 'ripl/hirb'
-require 'ripl/short_errors'
-require 'ripl/color_error'
+# require 'ripl/multi_line'
+# require 'ripl/irb'
+# require 'ripl/commands'
+# require 'ripl/shell_commands'
+# require 'ripl/color_result'
+# require 'ripl/auto_indent'
+# require 'ripl/hirb'
+# require 'ripl/short_errors'
+# require 'ripl/color_error'
 
-Ripl.config[:irb_verbose] = false
+# Ripl.config[:irb_verbose] = false
 
-module Ripl::HistorySize
-  def write_history
-    if (limit = config[:history_size]) && limit >= 0
-      saved_history = Array(history).reverse.slice(0, limit).reverse
-      File.open(history_file, 'w') {|f| f.write saved_history.join("\n") }
-    else
-      super
-    end
-  end
-end
+# module Ripl::HistorySize
+#   def write_history
+#     if (limit = config[:history_size]) && limit >= 0
+#       saved_history = Array(history).reverse.slice(0, limit).reverse
+#       File.open(history_file, 'w') {|f| f.write saved_history.join("\n") }
+#     else
+#       super
+#     end
+#   end
+# end
 
-Ripl::Shell.send :include, Ripl::HistorySize
+# Ripl::Shell.send :include, Ripl::HistorySize
