--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,7 @@ set -g history-limit 20000
 
 # Start numbering at 1
 set -g base-index 1
+set-window-option -g pane-base-index 1
 
 # Allows for faster key repetition
 set -s escape-time 0
@@ -28,10 +29,12 @@ bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE 
 # resize panes like vim
 # feel free to change the "1" to however many lines you want to resize by, only
 # one at a time can be slow
-bind < resize-pane -L 1
-bind > resize-pane -R 1
-bind - resize-pane -D 1
-bind + resize-pane -U 1
+bind < resize-pane -L 5
+bind > resize-pane -R 5
+bind - resize-pane -D 5
+bind + resize-pane -U 5
+
+set-option -g default-shell /bin/zsh
 
 # vi-style controls for copy mode
 setw -g mode-keys vi
