--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 unbind C-b
 set -g prefix C-a
 
-set -g history-limit 20000
+set -g history-limit 100000
 
 # Start numbering at 1
 set -g base-index 1
@@ -41,17 +41,15 @@ setw -g mode-keys vi
 
 # List of plugins
 # Supports `github_username/repo` or full git URLs
-set -g @tpm_plugins "              \
-  tmux-plugins/tpm                 \
-  tmux-plugins/tmux-sensible       \
-  tmux-plugins/tmux-copycat        \
-  tmux-plugins/tmux-open           \
-  tmux-plugins/tmux-online-status  \
-  tmux-plugins/tmux-yank           \
-"
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-online-status'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 set -g @almost-sensible 'on'
 
 # Initializes TMUX plugin manager.
 # Keep this line at the very bottom of tmux.conf.
-run-shell ~/.tmux/plugins/tpm/tpm
+run -b '~/.tmux/plugins/tpm/tpm'
