--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,7 +11,7 @@ set-window-option -g pane-base-index 1
 set -s escape-time 0
 
 #Highlight active window
-set-window-option -g window-status-current-bg red
+set-window-option -g window-status-current-style bg=red
 
 # vim-like bindings
 unbind-key %
@@ -24,7 +24,7 @@ bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE 
 bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys C-j) || tmux select-pane -D"
 bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys C-k) || tmux select-pane -U"
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
-bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
+# bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # resize panes like vim
 # feel free to change the "1" to however many lines you want to resize by, only
@@ -47,6 +47,16 @@ set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-online-status'
 set -g @plugin 'tmux-plugins/tmux-yank'
+
+# # key-based history yanking
+set -g @plugin 'Morantron/tmux-fingers'
+
+# # fuzzy find in history
+set -g @plugin 'laktak/extrakto'
+
+# # Better window titles
+set -g set-titles on
+set -g @plugin 'MikeDacre/tmux-zsh-vim-titles'
 
 set -g @almost-sensible 'on'
 
