--- a/.gitconfig
+++ b/.gitconfig
@@ -8,14 +8,17 @@
   st = status
   br = branch
   co = checkout
+  p = push -u
 [core]
   editor = vim -f
-	excludesfile = ~/.gitignore
+  excludesfile = ~/.gitignore
+[pull]
+  rebase = true
 [push]
-  default = current
+  default = simple
 [rerere]
   enabled = true
 [rebase]
-	autostash = true
+  autostash = true
 [stash]
-	showPatch = true
+  showPatch = true
