Update config for personal.

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
   name = Octavian Neamțu
-  email = octavian.neamtu@annkissam.com
+  email = oneamtu89@gmail.com
 [color]
   ui = true
 [alias]
