Small tweaks, mouse mode in tmux.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,7 @@
 unbind C-b
 set -g prefix C-a
+# C-a a will forward prefix
+bind-key a send-prefix
 
 set -g history-limit 100000
 
@@ -33,6 +35,9 @@ bind < resize-pane -L 5
 bind > resize-pane -R 5
 bind - resize-pane -D 5
 bind + resize-pane -U 5
+
+# Mouse mode on
+set -g mouse on
 
 set-option -g default-shell /bin/zsh
 
